Verification and Reverify OTP

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,5 @@
 PORT=8080
-MONGO_URI='mongodb+srv://pipifyadmin:Fsllelhfuhffjsd32@cluster0.vuy0ob4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+MONGO_URI='mongodb+srv://pipifyadmin:Fsllelhfuhffjsd32@cluster0.vuy0ob4.mongodb.net/pipify?retryWrites=true&w=majority&appName=Cluster0'
+MAILTRAP_USER=db50e6a98c3d8e
+MAILTRAP_PASSWORD=48d3af346a98de
+VERIFICATION_EMAIL=no-reply@pipify.com
