Signup APIs Completed

--- a/server/.env
+++ b/server/.env
@@ -3,5 +3,5 @@ MONGO_URI='mongodb+srv://pipifyadmin:Fsllelhfuhffjsd32@cluster0.vuy0ob4.mongodb.
 MAILTRAP_USER=db50e6a98c3d8e
 MAILTRAP_PASSWORD=48d3af346a98de
 VERIFICATION_EMAIL=no-reply@pipify.com
-PASSWORD_RESET_LINK=http://localhost:8080/reset-password
+PASSWORD_RESET_LINK=http://localhost:8080/reset-password.html
 SIGN_IN_URL=http://localhost:8080/sign-in
