Authentication APIs Completed

--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,7 @@ MAILTRAP_PASSWORD=48d3af346a98de
 VERIFICATION_EMAIL=no-reply@pipify.com
 PASSWORD_RESET_LINK=http://localhost:8080/reset-password.html
 SIGN_IN_URL=http://localhost:8080/sign-in
+JWT_SECRET=secretpasswordpipify
+CLOUD_NAME=djn7hukpg
+CLOUD_KEY=638988638617358
+CLOUD_SECRET=gqE6qExpg-wQBlLWCx79-VNG7WM
