--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "tsnd --respawn -r tsconfig-paths/register --pretty --transpile-only ./src/server.ts",
     "build": "tsc && tsc-alias",
-    "start": ""
+    "start": "node ./dist/server.js"
   },
   "author": "Rahul Mistry",
   "license": "ISC",
