--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.4.5",
     "nodemailer": "^6.9.14",
     "yup": "^1.4.0"
