--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,12 @@
     "cloudinary": "^2.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
     "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.5",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "yup": "^1.4.0"
   },
@@ -29,6 +31,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.9",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.10",
