--- a/server/.env
+++ b/server/.env
@@ -9,3 +9,4 @@ JWT_SECRET=secretpasswordpipify
 CLOUD_NAME=djn7hukpg
 CLOUD_KEY=638988638617358
 CLOUD_SECRET=gqE6qExpg-wQBlLWCx79-VNG7WM
+NODE_ENV=development
