--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,11 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.5",
+    "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
+    "winston": "^3.13.1",
+    "winston-daily-rotate-file": "^5.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -30,6 +33,7 @@
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.9",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15",
