--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
+    "compression": "^1.7.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^7.3.1",
     "formidable": "^3.5.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.5",
@@ -29,6 +32,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.6",
